--- a/src/style.css
+++ b/src/style.css
@@ -3,9 +3,9 @@
    margin: 0 auto;
    box-sizing: border-box;
    width: 700px;
-   border: solid rgb(58, 209, 255) 3px;
+   border: solid rgb(255, 192, 203) 3px;
    box-shadow: 5px 6px 10px rgba(0, 0, 0, 0.3);
-   color: rgb(89, 88, 88);
+   color: rgb(6, 57, 48);
    font-family: 'Kanit', sans-serif;
  }
 
@@ -25,10 +25,15 @@
  }
 
  .btn {
-   background-color: green;
-   border-color: green;
+   background-color: rgb(0, 63, 52);
+   border-color: rgb(0, 63, 52);
    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+ }
 
+ .btn:hover {
+   background-color: rgb(255, 192, 203);
+   border-color: rgb(255, 192, 203);
+   color: rgb(0, 63, 52);
  }
 
  .btn-current {
@@ -37,7 +42,7 @@
  }
 
  .form-control {
-   border-color: green;
+   border-color: rgb(0, 63, 52);
    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
  }
 
@@ -87,7 +92,7 @@
    margin: 0 5px 5px 7px;
    box-sizing: border-box;
    width: 680px;
-   border: solid rgb(58, 209, 255) 3px;
+   border: solid rgb(255, 192, 203) 3px;
    box-shadow: 5px 6px 5px rgba(0, 0, 0, 0.3);
  }
 
@@ -96,9 +101,20 @@
  }
 
  .github-link {
+
    font-size: 16px;
    text-align: center;
-   text-decoration: none;
+
    margin: 10px;
    font-family: monospace;
+ }
+
+ .github {
+   color: rgb(0, 63, 52);
+   text-decoration: none;
+ }
+
+ .github:hover {
+   text-decoration: underline;
+   font-size: 17px;
  }
