--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,19 @@
+ body {
+   background-image: url("../img/back.jpg");
+
+ }
+
  .body {
    display: block;
-   margin: 0 auto;
+   margin: 50px auto;
    box-sizing: border-box;
    width: 700px;
    border: solid rgb(255, 192, 203) 3px;
    box-shadow: 5px 6px 10px rgba(0, 0, 0, 0.3);
-   color: rgb(6, 57, 48);
+   color: rgb(255, 255, 255);
    font-family: 'Kanit', sans-serif;
+   background-color: rgba(255, 255, 255, 0.3);
+
  }
 
  img {
@@ -24,10 +31,27 @@
    padding: 30px 0px 10px 30px;
  }
 
+ .newCity {
+   background-color: rgba(255, 192, 203, 0.8);
+ }
+
+ .newCity:focus {
+   background-color: rgba(255, 192, 203, 0.6);
+   border-color: rgb(0, 63, 52);
+   box-shadow: 5px 5px 5px rgba(0, 63, 52, 0.3);
+ }
+
  .btn {
    background-color: rgb(0, 63, 52);
    border-color: rgb(0, 63, 52);
    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
+   margin: 0;
+   padding: 5px 40px;
+ }
+
+ .col-3 {
+   padding: 0;
+   margin: 0;
  }
 
  .btn:hover {
@@ -36,10 +60,6 @@
    color: rgb(0, 63, 52);
  }
 
- .btn-current {
-   text-align: right;
-   margin-right: 70px;
- }
 
  .form-control {
    border-color: rgb(0, 63, 52);
@@ -101,15 +121,15 @@
  }
 
  .github-link {
-
+   background-color: rgb(255, 192, 203);
    font-size: 16px;
    text-align: center;
-
    margin: 10px;
    font-family: monospace;
  }
 
  .github {
+
    color: rgb(0, 63, 52);
    text-decoration: none;
  }
