--- a/src/style.css
+++ b/src/style.css
@@ -10,10 +10,14 @@
    max-width: 700px;
    border: solid rgb(255, 192, 203) 3px;
    box-shadow: 5px 6px 10px rgba(0, 0, 0, 0.3);
-   color: rgb(255, 255, 255);
+   color: rgb(168, 166, 166);
    font-family: 'Kanit', sans-serif;
    background-color: rgba(255, 255, 255, 0.3);
 
+ }
+
+ .bright {
+   color: rgb(255, 255, 255);
  }
 
  img {
@@ -22,6 +26,7 @@
  }
 
  .main-img {
+   margin: 0px 30px 0px 30px;
    width: 100px;
    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3);
    border-radius: 5px;
@@ -124,9 +129,6 @@
    text-align: center;
  }
 
- .light {
-   color: rgb(168, 166, 166);
- }
 
  .github-link {
    background-color: rgb(255, 192, 203);
